Fix header item alignment in @media

--- a/Content/CSS/Shared.css
+++ b/Content/CSS/Shared.css
@@ -137,11 +137,11 @@ footer {
     }
 
     .headernav-item {
-        width: 32vw;
+        width: 24vw;
     }
 
     .navicon {
-        width: 8em;
+        width: 24vw;
     }
 
     .logo {
